--- a/bootdemo/bootdemo/Views/Home/Index.cshtml
+++ b/bootdemo/bootdemo/Views/Home/Index.cshtml
@@ -60,8 +60,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2 class="display-4">News</h2>
     @if (ViewBag.apikey == null || ViewBag.apikey == "")
     {
         <form>
