--- a/bootdemo/bootdemo/Views/Shared/_Layout.cshtml
+++ b/bootdemo/bootdemo/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - bootdemo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - bootdemo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> | Powerd by <a href="https://newsapi.org/">NewsAPI.org</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
